<resources>
    <string name="app_name">Howse</string>
    <string name="btn_inquilino">INQUILINO</string>
    <string name="btn_arrendaador">ARRENDADOR</string>
    <string name="tv_preg_inicio">¿Qué eres?</string>
    <string name="et_CorreoLogin"> Email Ej: dan@howse.es</string>
    <string name="et_PasswordLogin"> Contraseña</string>
    <string name="btn_Iniciar_Sesion">Iniciar Sesion</string>
    <string name="btn_RecuperarPsw">¿No Recuerdas tu Contraseña? Pincha Aquí</string>
    <string name="btn_Registrarse">¿No tienes cuenta? Registrate Aquí</string>
    <string name="msj_userregistered_register">Usuario registrado:</string>

    <string name="tvDia">%s</string>

    <string name="msj_registrado">Se ha registrado</string>
    <string name="msj_no_registrado">No se ha podido registrar</string>
    <string name="msj_nodatos">No hay datos</string>
    <string name="msj_logado">Se ha Logueado</string>
    <string name="msj_no_accede">404 no found No se Puede loguear</string>
    <string name="msj_no_data">No se encontraron los datos</string>
    <string name="msj_pwd_length">Tiene que tener la contraseña mas de 6 digitos</string>
    <string name="et_EmailReg">Introduce tu Email</string>
    <string name="et_PasswordReg">Introduce tu contraseña</string>
    <string name="btn_RegistrarUsuario">registrar</string>
    <string name="et_NombreReg">Nombre</string>
    <string name="et_ApellidoReg">Apellido</string>
    <string name="et_PasswordRepeat">Repite la contraseña</string>
    <string name="tvBienvenida">¡Bienvenid@ a Howse! </string>
    <string name="tv_descripcion_inicio">Organize, make it simple.</string>
    <string name="tv_logo">Howse</string>
    <string name="hint_codigo_casa">Ej: #4F6G83</string>

    <string name="tv_cod_casa">Escribe el código de tu nueva casa:</string>
    <string name="nav_tareas">Tareas</string>
    <string name="nav_chat">Chat</string>
    <string name="nav_chat_arrendador">Chat</string>
    <string name="nav_compra">Compra</string>
    <string name="nav_perfil">Perfil</string>
    <string name="nav_perfil_arrendador">Perfil</string>
    <string name="tvLogIn">Log In</string>
    <string name="tvRegistro">Nuevo Usuario</string>

    <string name="txt_t_NombreUserProfile">Nombre:  %1$s</string>
    <string name="btn_ModificarDatosPerfil">Modificar Datos</string>
    <string name="campo_titulo">nombreUsuario</string>
    <string name="campo_anyo">apellidosUsuario</string>
    <string name="btn_GuardarCambios">Añadir Tarea</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="btn_ClipBoard">Copiar</string>
    <string name="title_activity_lista_de_la_compra">ListaDeLaCompraActivity</string>
    <string name="title_activity_lista_compra">ListaCompraActivity</string>
    <string name="tv_titulo_compra">Lista de la compra</string>
    <string name="btn_AniadirActividad">Añadir Actividad</string>
    <string name="btn_agnadir_tarea">Añadir tarea</string>
    <string name="btn_GuardarCambiosTareas">guardar cambios</string>
    <string name="btn_AniadirActividadPop">añadir actividad</string>
    <string name="et_actividad">Ej: limpiar baño</string>
    <string name="tv_AboutUs">Howse nace a partir de la necesidad de mejorar la comunicación y la convivencia en el ecosistema de los pisos compartidos. Durante la última década se ha hecho mucho hincapié en agilizar el trámite de alquiler tanto de habitaciones como de pisos, pero no en mejorar las relaciones humanas entre inquilinos y arrendador. Las personas que tienen que hacer uso de viviendas compartidas, suelen tener problemas a la hora de comunicar incidencias al arrendador y de organizarse, ya sea para comprar productos de uso común o para organizar tareas de limpieza. </string>
    <string name="title_activity_about_us">AboutUsActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="et_Subject">Subject</string>
    <string name="et_Mensaje">Message</string>
    <string name="btn_EnviarMensaje">Enviar</string>

</resources>
