<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00000000"
    android:orientation="vertical"
    android:id="@+id/linearLayoutagna"
    tools:context=".AniadirTareasActivity"

    android:padding="16dp">

    <ImageButton
        android:id="@+id/btnAtras"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_gravity="right"
        android:background="@null"
        android:onClick="cancel"
        app:srcCompat="@drawable/ic_multiply_blue"
        tools:ignore="VectorDrawableCompat" />




    <Spinner
        android:id="@+id/spDia"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="20dp"
       />

    <Spinner
        android:id="@+id/spPersona"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"

        />

    <Spinner
        android:id="@+id/spTarea"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        />



    <Button
        android:id="@+id/btnGuardarTareas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:onClick="cargarDatos"
        android:fontFamily="@font/roboto_light"
        android:background="@drawable/custom_button1"
        android:textColor="@color/ColorBackGround"
        android:text="@string/btn_agnadir_tarea"/>

    <Button
        android:id="@+id/aniadirActividad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="abrirPop"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:layout_gravity="center"
        android:text="@string/btn_AniadirActividad"
        android:background="@drawable/custom_button1"
        android:textColor="@color/ColorBackGround"
        android:fontFamily="@font/roboto_light"

        />

    <Button
        android:id="@+id/btnGuardarCambios"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/btn_GuardarCambiosTareas"
        android:fontFamily="@font/roboto_light"
        android:background="@drawable/custom_button1"
        android:textColor="@color/ColorBackGround"/>

</LinearLayout>